*Empty MediaWiki Message*

--- a/Takamimt.mw
+++ b/Takamimt.mw
@@ -2,7 +2,16 @@
 
 '''Takamimt''' ([[Assaɣ ussnan]]: '''Cuminum cyminum''') d [[imɣan|imɣi]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Tabecnixt (tawacult)|tbecnixt]].
 
+== Aglam ==
+Takamimt d imɣi igan d [[tuga]]. Addud-is (leɛli-ynes) yettawaṭ gar 30 ar 40 cm 
 [[Tugna:Sa cumin.jpg|thumb|250px|[[ifes|ifsan]] n tkamimt]]
 
+== Isalan imeččiyen ==
+
+== Azal-is deg tdamsa ==
+
+== Iseqdac ==
+
+== Ẓeṛ daɣen ==
 
 [[Category:imɣan]]
