*Empty MediaWiki Message*

--- a/1_yennayer.mw
+++ b/1_yennayer.mw
@@ -11,24 +11,22 @@ Ass n '''1 yennayer''' d [[ass]] amezwaru n yal aseggas deg [[taswast tagrigurt|
 
 
 === [[Tasut tis 21]] ===
-* [[2001]] : [[Grik|Tamurt n Grik]] tekcem di [[taɣzut euro]].
-* [[2002]] : 
-**[[euro|idrimen n euro]] kecmen ar tasnisnit deg 12 [[Iwunak imaslaḍen n Tadukli n Turuft]].
-** asermed n[[Amtawa Igenni yeldin]] i ḍmen taɛessast n igenni deg akk akal n Iwunak imasladen. 
+* [[2001]] : [[Legrig|Tamurt n Grik]] tekcem di [[tama n euro]].
+* [[2002]] : asermed n [[Amtawa n igenwan yeldin|imtawa n igenwan yeldin]] isegger tuguẓt (taɛessast) n igenwan n tmura n iwunak igmanen yakk
 [[Tugna:Brazil.LulaDaSilva.02.jpg|thumb|right|120px|Luiz Inácio Lula da Silva, deg wamber 2003 di [[Muzambik]].]]
-* [[2003]] : [[Luiz Inácio Lula da Silva]], neɣ ''Lula'', yuɣaled d-aselway amezwaru n uẓelmaḍ (akabar aserti) di Brazil.
+* [[2003]] : [[Luiz Inácio Lula da Silva]] yettwassnen Kan s  '''Lula''' yuɣal d [[aselway]] amezwaru n uẓelmaḍ (akabar aserti) di tmurt Brazil.
 * [[2007]] :
-** [[Bulgarya]] akkw d [[Rumanya]] kecment deg [[Tadukli n Turuft]].
-** [[Sluvinya]] t-sedda [[taɣzut euro]].
-** [[Ban Ki-moon]] akuryan n wenẓul, yuɣal [[amaray amatu n Iɣlanen Yeddukklen]] amaynu deg ubeddel n [[Kofi Annan]].
-* [[2008]] : [[Qubrus (tamurt)|Tagduda n Qubrus]] akkw d [[Malṭa]] kecment deg [[taɣzut euro]].
+** [[Bulgarya]] akk d [[Ṛumanya]] kecment deg [[Tiddukla n Uruppa]].
+** [[Sluvinya]] tekcem ar [[tama n euro]].
+** [[Ban Ki-moon]] akuryan n wenẓul yuɣal [[amaray amatu n iɣlanen yeddukklen]] amaynu deg ubeddel n [[Kofi Annan]].
+* [[2008]] : [[Qubrus (tamurt)|Tagduda n Qubrus]] akkw d [[Malṭa]] kecment deg [[tama n euro]].
 * [[2009]] : 
-** [[Sluvakya]] tekcem deg [[taɣzut euro]].
-** asermed n ugzam udbil amaynu n [[Grunland]].
-* [[2010]] : Tamurt n [[Spenyul]] t-dem taselwit n Turuft.
+** [[Sluvakya]] tekcem deg [[Tama n euro]].
+** asermed n ugzam udbil amaynu n [[Greenland]].
+* [[2010]] : Tamurt n [[Spanya]] t-ddem taselwit n [[Tiddukla n Uruppa|Turuft]].
 * [[2011]] : 
-** [[Isṭunya]] tekcem deg [[taɣzut euro]].
-** tinṭagin timaynutin mgal imasiḥiyen, tikkelt agi di [[Maṣer]]. [[Aremmaɣ ineslem]] i nǧeɛ 21 yemmuten dɣa 79 imugas zdat [[taglizt takaṭulit kupt]] n [[Tiskendrit]]<ref>[http://www.liberation.fr/monde/01012311063-egypte-un-attentat-devant-une-eglise-d-alexandrie-fait-21-morts   Égypte: un attentat devant une église d’Alexandrie fait 21 morts]</ref>.
+** [[Isṭunya]] tekcem deg [[tama n euro]].
+** tinṭagin timaynutin mgal imasiḥiyen, tikkelt agi di [[Maṣer|Miẓran]] n [[Aremmaɣ ineslem|uremmaɣ ,ineslem]] yegla-d s 21 yemmuten dɣa 79 imugas zdat [[taglizt takaṭulit kupt]] n [[Tiskendrit]]<ref>[http://www.liberation.fr/monde/01012311063-egypte-un-attentat-devant-une-eglise-d-alexandrie-fait-21-morts   Égypte: un attentat devant une église d’Alexandrie fait 21 morts]</ref>.
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
