*Empty MediaWiki Message*

--- a/Amermur.mw
+++ b/Amermur.mw
@@ -1,5 +1,19 @@
 {{Databox}}
-{{Datastub}}
+'''Amermur''' ([[Assaɣ ussnan]]: '''Portulaca oleracea''') d [[talmest]] n [[imɣi|yimɣan]] [[imɣi n useggas|imseggasen]] yeṭṭafar [[tawsit (tudersent)|tawsit]] n [[arɣilem|urɣilem]] deg [[tawacult (tasnudert)|twacult]] n [[timermurin|tmermurin]] 
+
+== Isemawen n iṭen ==
+
+== Aglam ==
+
+== Ideggan n wemɣay ==
+
+== Isexdamen i wučči ==
+
+== Isexdamen n usuji ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Imɣan]]
 
 == Tilmas ==
 
