*Empty MediaWiki Message*

--- a/Taninna_tamezdayt.mw
+++ b/Taninna_tamezdayt.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Falco tinnunculus alexandri MHNT.ZOO.2010.11.94.6.jpg|thumb| ''Falco tinnunculus alexandri'']]
 '''Taninna tamezdayt''' ([[Assaɣ ussnan]]: ''Falco tinnunculus'') d [[talmest]] n [[aseflay|iseflayen]] yettidiren s waṭas deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt n Ugafa|Tefrikt n ugafa]], Aylal-a d win ilan (yesɛan) aṭas n [[ini|yiniten]] meẓẓiy ɣef [[aseflay|useflay]], [[aferfer|yettafeg]] s tazla 
 
 == Aglam d wučči ==
