*Empty MediaWiki Message*

--- a/Imi_n_waryel.mw
+++ b/Imi_n_waryel.mw
@@ -1,5 +1,9 @@
 {{Databox}}
-{{Datastub}}
+'''Imi n waryel''' ([[ Assaɣ ussnan]]: '''Salvia verbenaca''') d [[talmest]] n [[imɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[tazzurt]], Dɣa tawsit-a d tin yettekkan deg [[tawacult (tasnudert)|twacult]] n [[timcenfar|temcenfar]]
+
+== Aglam ==
+
+== Ideggan n wemɣay ==
 
 ==Tilmas==
 
