*Empty MediaWiki Message*

--- a/Imi_n_waryel.mw
+++ b/Imi_n_waryel.mw
@@ -5,7 +5,7 @@
 
 == Ideggan n wemɣay ==
 
-==Tilmas==
+==Tiwlafin==
 
 [[Tugna:Salvia verbenaca Habitus 2010-4-02 SierraMadrona.jpg|thumb|Salvia verbenaca - Imi n wariel]]
 
