--- a/Imi_n_waryel.mw
+++ b/Imi_n_waryel.mw
@@ -9,11 +9,11 @@
 
 [[Tugna:Salvia verbenaca Habitus 2010-4-02 SierraMadrona.jpg|thumb|Salvia verbenaca - Imi n wariel]]
 
-==Ismawen==
+==Tasensartut==
 *Isem-is s latinit: Salvia verbenaca  
 *Isem-is s tefransist: Sauge fausse-verveine
 *Ismawen-is nniḍen s teqbaylit: 
-*Ismawen-is nniḍen s tmaziɣt: 
+*Ismawen-is nniḍen s tmaziɣt:
 
 == Isseqdac ==
 
