*Empty MediaWiki Message*

--- a/Agurim.mw
+++ b/Agurim.mw
@@ -1,5 +1,17 @@
 {{Automatic taxobox}}
+'''Agurim''' neɣ '''Butenzarin''' ([[Assaɣ ussnan]]: '''Salvia officinalis''') d [[talmest]] n [[imɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[tazzurt]], Dɣa tawsit-a d tin yeṭṭafaren [[tawacult (tasnudert)|twacult]] n [[timcenfar|temcenfar]]
 
+== Aglam ==
+
+== Asismel ==
+
+== Asexdem ==
+
+== Ẓeṛ daɣen ==
+* [[Imi n waryel]]
+
+[[Taggayt:imɣan]] 
+[[Taggayt:timcenfar]]
 
 == Tilmas ==
 
