*Empty MediaWiki Message*

--- a/Agerru.mw
+++ b/Agerru.mw
@@ -1,5 +1,5 @@
 [[Tugna:RobertFuddBewusstsein17Jh.png|thumb|250px|Tiwura n ugerru]]
-'''Agerru''' d agraw neɣ d asemdi n tdusiyin n tukza am [[tanuggit|tnuggit]], [[Tamusni]], [[Aswingem]], [[Tanurnant]], [[Tagerrawt]], [[Taɣara]] d [[tutlayt]].
+'''Agerru''' neɣ '''Alli''' d agraw neɣ d asemdi n tdusiyin n tukza am [[tanuggit|tnuggit]], [[Tamusni]], [[Aswingem]], [[Tanurnant]], [[Tagerrawt]], [[Taɣara]] d [[tutlayt]].
 Agerru ila (yesɛa) tizmert di [[tasugint|tsugint]] d [[asemgerred|usemgerred]], Akken daɣen yella d amasay (imḍebber) af tɣuri n [[afray|wafrayen]].
 
 == Assaɣ d wallaɣ ==
