*Empty MediaWiki Message*

--- a/Tazazrayt.mw
+++ b/Tazazrayt.mw
@@ -4,7 +4,21 @@
 Tilmas-is ttemɣayent-d ya d [[aseklu|isekla]] neɣ d [[tamdikt|timedkin]] neɣ d tuga yakk-nsent [[ameɣlal n tizzegzut|timeɣlalin n tizzegzut]]
 
 == Umuɣ n tewsitin ==  
+[[Asismel n APG III|Asismel n APG III (2009)]] yessedda deg twacult-a tawsit n ''[[Didymeles]]'' yellan ya tersa deg twacult n ''[[Didymelaceae]]
 
+S unect n ''[[Ammas aɣelnaw i yisalan n teknusnudert|NCBI]]'' (27 yebrir 2010) 
+* Tawsit n [[Azazer|Uzazer]] 
+* Tawsit n [[Didymeles]] 
+* Tawsit n [[Notobuxus]]
+* Tawsit n [[Pachysandra]]
+* Tawsit n [[Aserkuk|Sarcococca]]
+* Tawsit n [[Styloceras]]
+
+== Umuɣ n telmas ==
+
+== Aglam ==
+
+== Ẓeṛ daɣen ==
 
 
 [[Taggayt:tiwaculin n imɣan]]
