*Empty MediaWiki Message*

--- a/Tikdi.mw
+++ b/Tikdi.mw
@@ -2,7 +2,7 @@
 
 Tikdi tezmer ad tili tgerrez am tekdi n [[ajjig|ujjik]] d [[igumma]] akken i tezmer ad tili d-iri-it am tekdi n [[Alammu|ulammu]] 
 
-Llan 7 n [[aferdis akruran|iferdisen ikruranen]] ifraren kan ssufuɣen-d tikdiwin:  Fluṛ (F), Kluṛ (Cl), Bṛum (Br), Yud (I), [[Aksujin]] (O²), Fusfuṛ (P), [[ihiǧǧ]] (As)
+Llan 7 n [[aferdis akruran|iferdisen ikruranen]] ifraren kan ssufuɣen-d tikdiwin:  Fluṛ (F), Kluṛ (Cl), Bṛum (Br), Yud (I), [[Uksijin]] (O²), Fusfuṛ (P), [[ihiǧǧ]] (As)
 
 == [[Tagerrawt]] ==
 
