*Empty MediaWiki Message*

--- a/Tikdi.mw
+++ b/Tikdi.mw
@@ -9,4 +9,4 @@ Llan 7 n [[aferdis akruran|iferdisen ikruranen]] ifraren kan ssufuɣen-d tikdiwi
 == Tikdiwin ɣer ufgan ==
 
 == Ẓeṛ daɣen == 
-*
+* [[Taẓunẓut]]
