--- a/Asudu.mw
+++ b/Asudu.mw
@@ -1,7 +1,7 @@
-[[Tugna:Tetu%C3%A1n001_fachada_instituto-cervantes.jpg|thumb|250px|Afurk n [[Asudu n Cervantes|usidu n Cervantes]] deg temdint n [[Tiṭṭawin (tamdint)|Tiṭṭawin]] deg tmurt n [[Ameṛṛuk|Umeṛṛuk]]]] 
+[[Tugna:Tetu%C3%A1n001_fachada_instituto-cervantes.jpg|thumb|250px|Afurk n [[Asudu n Cervantes|usudu n Cervantes]] deg temdint n [[Tiṭṭawin (tamdint)|Tiṭṭawin]] deg tmurt n [[Ameṛṛuk|Umeṛṛuk]]]] 
 
 
-'''Asudu''' (Asget: '''isuda''') d [[tuddsa]] tameɣlalt id yennulfan i kra n yiswi. Tettili d tasudut n unagi (n unadi), amdya [[Asudu n Pasteur]] akken i tezmer ad tili deg kra n tmura d amur deg [[taseddawit|tseddawit]] neɣ d tasudut n [[tizrawin timingin|tezrawin timingin]] neɣ d tagrawt n tsuda [[tagrasnawt|tigrasnawin]] neɣ d tasudut tamazrawt tilellit am asudu n tẓuriyin yeẓlin 
+'''Asudu''' (Asget: '''isuda''') d [[tuddsa]] tameɣlalt id yennulfan i kra n yiswi. Tettili d tasudut n unagi (n unadi), amdya [[Asudu n Pasteur]] akken i tezmer ad tili deg kra n tmura d amur deg [[taseddawit|tseddawit]] neɣ d tasudut n [[tizrawin timingin|tezrawin timingin]] neɣ d tagrawt n tsuda [[tagrasnawt|tigrasnawin]] neɣ d tasudut tamazrawt tilellit am asudu n tẓuriyin yeẓlin
 
 == Umuɣ n isuda == 
 
