*Empty MediaWiki Message*

--- a/Tuddsa_n_Yeɣlanen_Yeddukklen.mw
+++ b/Tuddsa_n_Yeɣlanen_Yeddukklen.mw
@@ -1,4 +1,18 @@
 {{Databox}}
-'''Tuddsa n Yeɣlanen Yedduklen''' (neɣ ''Iɣlanen Yeddukklen'', ''Lejnas Yeddukklen''), d tuddsa tagraɣlant ay iqeddcen i lmend n wemɛawen gar tmura deg yinurar n lqanun, n laman, n tdamsa, n tmetti, n yizerfan n wemdan akked lebni n talwit deg umaḍal. Tuddsa-a sbedden-tt-id deg 1945, asmi ay ifuk [[Amgaru Amaḍlan Wis Sin|Wemgaru Amaḍlan Wis Sin]], deg wemkan n Temɣunt n Yeɣlanen, i lmend n weḥbas n yimenɣi gar tmura. Ass-a, llant 192 n tmura ay yettekkan deg Tuddsa n Yeɣlanen Yeddukklen. Tuddsa-a tesɛa daɣen aṭas n tuddsiwin ay yeqqnen ɣer-s, yal yiwet tqeddec deg wenrar-nnes. Axxam n Yeɣlanen Yeddukklen yezga-d deg temdint n [[New York]], deg [[Iwunak Yeddukklen|Yiwunak Yeddukklen]].
+'''Tuddsa n Yeɣlanen Yedduklen''' (neɣ ''Iɣlanen Yeddukklen'') d [[tuddsa]] [[tuddsa tagraɣlant|tagraɣlant]] iqeddcen i lmend n tallalt (wemɛawen) gar tmura deg yinurar n usaduf (lqanun), n teflest, n [[tadamsa|tdamsa]], n [[timetti|tmetti]] yakk d izerfan n wemdan akked tmuski n [[talwit|telwit]] deg umaḍal. Tuddsa ayyi sbedden-tt-id deg useggas n [[1945]] assmi ifuk [[amsenɣi amadlan wis sin|wemsenɣi amadlan wis sin]] deg yideg n [[tamɣunt n yeɣlalen|Temɣunt n Yeɣlanen]] i lmend n usebded (weḥbas) n yimenɣi gar tmura. Ass-a, llant 192 n [[awanak|tmura]]  yettekkan deg Tuddsa n Yeɣlanen Yeddukklen. Tuddsa-a tla (tesɛa) daɣen aṭas n tuddsiwin yeqqnen ar ɣur-s, yal yiwet tqeddec deg wenrar-iss. 
 
-[[Category:Tuddsa Tagraɣlant]]
+Ammas n Yeɣlanen Yeddukklen yezga-d deg temdint n [[New York]] deg tmurt n [[Iwunak Yeddukklen|Yiwunak Yeddukklen]].
+
+== Amezruy ==
+
+== Amaray amatu ==
+
+== Izerfan n wemdan ==
+
+== Tamsuka n yeɣlanen yedduklen ==
+
+== Asiẓref ==
+
+== Ẓeṛ daɣen == 
+
+[[Taggayt:Tuddsiwin tigreɣlanin]]
