--- a/Tuddsa_n_UNESCO.mw
+++ b/Tuddsa_n_UNESCO.mw
@@ -1,6 +1,6 @@
 [[file:Flag of UNESCO.svg|220px|right|tamatart n yunisku|thumb]]
 
-'''Tuddsa n [[Timettiwin Imunen|Tmettiwin Imunen]] n Usegmi, Tussna, d Yidles.''' (s [[Tutlayt tanglizt|tnglizt]]: United Nations Educational, Scientific and Cultural Organization), s usegzel: UNESCO. 
+'''Tuddsa n yeɣlalen yedduklen i usegmi, tussna d yidles''' neɣ '''UNESCO''' (s [[Taglizit|tnglizt]]: United Nations Educational, Scientific and Cultural Organization)
 
 UNESCO d-tasnurayt tamẓlayt iḍfarn i tmaddast n tmttin imunn, tettuṣka g usggʷas 1945. awttas nns adslan iga t ad taws g ussrṣu n ufra, s usattuy n uswir n umyawas gr tmura n umaḍal g yigran n usmuttg d usgmi d tdlsa, bac ad yili uzrak amaḍlan i tɣdmt d usaḍuf, d izrfan n ufgan. iḍfar 195 n uwank tamagrawt ad, yili usɣim nns amaddud g [[Bariz|bariz]], mklli ghrs uggar n 50 n usira d tugtt n isinagn n usslmd g umaḍal.
 
