*Empty MediaWiki Message*

--- a/Tuddsa_n_UNESCO.mw
+++ b/Tuddsa_n_UNESCO.mw
@@ -4,7 +4,7 @@
 
 UNESCO d-tasnurayt tamẓlayt iḍfarn i tmaddast n tmttin imunn, tettuṣka g usggʷas 1945. awttas nns adslan iga t ad taws g ussrṣu n ufra, s usattuy n uswir n umyawas gr tmura n umaḍal g yigran n usmuttg d usgmi d tdlsa, bac ad yili uzrak amaḍlan i tɣdmt d usaḍuf, d izrfan n ufgan. iḍfar 195 n uwank tamagrawt ad, yili usɣim nns amaddud g [[Bariz|bariz]], mklli ghrs uggar n 50 n usira d tugtt n isinagn n usslmd g umaḍal.
 
-== tiwuriwin d ihilen idslann ==
+== tiwura d ihilen igejdanen ==
 
 sg twuriwi n tmaddast a, ar d tssfuɣ tiklt ar tayaḍ yat tlgamt n idɣarn idlsann d imazrayn nna d iqqan ad ttuḥḍan.
 
