*Empty MediaWiki Message*

--- a/Tuddsa_n_UNESCO.mw
+++ b/Tuddsa_n_UNESCO.mw
@@ -1,8 +1,7 @@
 [[file:Flag of UNESCO.svg|220px|right|tamatart n yunisku|thumb]]
 
-'''Tuddsa n yeɣlalen yedduklen i usegmi, tussna d yidles''' neɣ '''UNESCO''' (s [[Taglizit|tnglizt]]: United Nations Educational, Scientific and Cultural Organization)
-
-UNESCO d-tasnurayt tamẓlayt iḍfarn i tmaddast n tmttin imunn, tettuṣka g usggʷas 1945. awttas nns adslan iga t ad taws g ussrṣu n ufra, s usattuy n uswir n umyawas gr tmura n umaḍal g yigran n usmuttg d usgmi d tdlsa, bac ad yili uzrak amaḍlan i tɣdmt d usaḍuf, d izrfan n ufgan. iḍfar 195 n uwank tamagrawt ad, yili usɣim nns amaddud g [[Bariz|bariz]], mklli ghrs uggar n 50 n usira d tugtt n isinagn n usslmd g umaḍal.
+'''Tuddsa n yeɣlalen yedduklen i usegmi, tussna d yidles''' (s [[Taglizit|tnglizt]]: ''United Nations Educational, Scientific and Cultural Organization'') s [[asegzel (tutlayt)|usegzel]]: '''UNESCO''' d [[tanegga]] yemmuzzgen teṭṭafar [[Tuddsa n Yeɣlanen Yeddukklen|Tuddsa n yeɣlanen iddukklen. Tanegga ayyi tekkr-d deg useggas n [[1945]] <br/> 
+Iswi agejdan n UNESCO d attekki deg usersi n telwit d teflest s werfad n uswir n tallalt gar n [[awanak|tmura]] n umadal deg tɣula n tezrawt d yidles i wsersi n uzrekki (lemqadra) d teɣdemt d tugdut d izerfan n wemdan d imenzayen igejdanen n tlelli
 
 == tiwura d ihilen igejdanen ==
 
