--- a/Tuddsa_n_UNESCO.mw
+++ b/Tuddsa_n_UNESCO.mw
@@ -1,4 +1,4 @@
-[[file:Flag of UNESCO.svg|220px|right|tamatart n yunisku|thumb]]
+[[file:Flag of UNESCO.svg|thumb|250px|Azamul n UNESCO]]
 
 '''Tuddsa n yeɣlalen yedduklen i usegmi, tussna d yidles''' (s [[Taglizit|tnglizt]]: ''United Nations Educational, Scientific and Cultural Organization'') s [[asegzel (tutlayt)|usegzel]]: '''UNESCO''' d [[tanegga]] yemmuzzgen teṭṭafar [[Tuddsa n Yeɣlanen Yeddukklen|Tuddsa n yeɣlanen iddukklen. Tanegga ayyi tekkr-d deg useggas n [[1945]] <br/> 
 Iswi agejdan n UNESCO d attekki deg usersi n telwit d teflest s werfad n uswir n tallalt gar n [[awanak|tmura]] n umadal deg tɣula n tezrawt d yidles i wsersi n uzrekki (lemqadra) d teɣdemt d tugdut d izerfan n wemdan d imenzayen igejdanen n tlelli
