*Empty MediaWiki Message*

--- a/Tuddsa_n_UNESCO.mw
+++ b/Tuddsa_n_UNESCO.mw
@@ -1,7 +1,9 @@
 [[file:Flag of UNESCO.svg|thumb|250px|Azamul n UNESCO]]
 
 '''Tuddsa n yeɣlalen yedduklen i usegmi, tussna d yidles''' (s [[Taglizit|tnglizt]]: ''United Nations Educational, Scientific and Cultural Organization'') s [[asegzel (tutlayt)|usegzel]]: '''UNESCO''' d [[tanegga]] yemmuzzgen teṭṭafar [[Tuddsa n Yeɣlanen Yeddukklen|Tuddsa n yeɣlanen iddukklen]]. Tanegga ayyi tekkr-d deg useggas n [[1945]] <br/> 
-Iswi agejdan n UNESCO d attekki deg usersi n telwit d teflest s werfad n uswir n tallalt gar n [[awanak|tmura]] n umadal deg tɣula n tezrawt d yidles i wsersi n uzrekki (lemqadra) d teɣdemt d tugdut d izerfan n wemdan d imenzayen igejdanen n tlelli
+Iswi agejdan n UNESCO d attekki deg usersi n telwit d teflest s werfad n uswir n tallalt gar n [[awanak|tmura]] n umadal deg tɣula n tezrawt d yidles i wsersi n uzrekki (lemqadra) d teɣdemt d tugdut d izerfan n wemdan d imenzayen igejdanen n tlelli <br/>
+Azal n 195 n [[awanak|iwunak]] ṭṭafaren tuddsa n UNESCO. Ammas-is yella di temdint n [[Paris]], akken daɣen i tla (tesɛa) ugar n 50 n tnariyin d kra n [[Asudu|isuda]] n tezrawt deg kra n tmura n iden. 
+UNESCO tla (tesɛa) 5 n iswiyen igejdanen gan d: Asedwel, Asrzrew (aselmed), Tussniwin tigamanin d tussniwin tilsanin d timettiyin, d yidles , akken daɣen id t-dehhel neɣ id t-ttall kra n isenfaren am [[asgemmay|usgemmay]] d usluɣmu atekniy yakk d wahilen n ussiɣer n isezrawen (iselmaden) yakk d isenfaren imazrayen d irakalen d taggaẓt n izerfan n wemdan
 
 == tiwura d ihilen igejdanen ==
 
