*Empty MediaWiki Message*

--- a/Tuddsa_n_UNESCO.mw
+++ b/Tuddsa_n_UNESCO.mw
@@ -5,6 +5,10 @@ Iswi agejdan n UNESCO d attekki deg usersi n telwit d teflest s werfad n uswir n
 Azal n 195 n [[awanak|iwunak]] ṭṭafaren tuddsa n UNESCO. Ammas-is yella di temdint n [[Paris]], akken daɣen i tla (tesɛa) ugar n 50 n tnariyin d kra n [[Asudu|isuda]] n tezrawt deg kra n tmura n iden. 
 UNESCO tla (tesɛa) 5 n iswiyen igejdanen gan d: Asedwel, Asrzrew (aselmed), Tussniwin tigamanin d tussniwin tilsanin d timettiyin, d yidles , akken daɣen id t-dehhel neɣ id t-ttall kra n isenfaren am [[asgemmay|usgemmay]] d usluɣmu atekniy yakk d wahilen n ussiɣer n isezrawen (iselmaden) yakk d isenfaren imazrayen d irakalen d taggaẓt n izerfan n wemdan
 
+Yiwet gar tuɣdaṭin (cceɣalat) n UNESCO ad taleɣ umuɣ n [[tigemmi n talsa|ideggan n tgemmi n talsa]]. Ideggan-a gan d ideggan imazrayen neɣ igamanen dɣa taggaẓt-nsen d ayen id t-ssutur tmetti tagreɣlant maca mači d tawuri neɣ tuɣdaṭ n UNESCO  
+
+== Amezruy ==
+
 == tiwura d ihilen igejdanen ==
 
 sg twuriwi n tmaddast a, ar d tssfuɣ tiklt ar tayaḍ yat tlgamt n idɣarn idlsann d imazrayn nna d iqqan ad ttuḥḍan.
