--- a/Tuddsa_n_UNESCO.mw
+++ b/Tuddsa_n_UNESCO.mw
@@ -9,13 +9,11 @@ Yiwet gar tuɣdaṭin (cceɣalat) n UNESCO ad taleɣ umuɣ n [[tigemmi n talsa|i
 
 == Amezruy ==
 
-== tiwura d ihilen igejdanen ==
+== tiwura d wahilen igejdanen ==
 
-sg twuriwi n tmaddast a, ar d tssfuɣ tiklt ar tayaḍ yat tlgamt n idɣarn idlsann d imazrayn nna d iqqan ad ttuḥḍan.
+== Tasuddest ==
 
-llann ghur '''yunisku''' smmus ihiln idslann: asgmi d usslmd, timassanin tigamanin, timassanin tinafganin d tnamunin, tadlsa, d amyawaḍ d tɣmsa
-
-da tettaws '''yunisku''' g attas n isnfaṛn am d assinf n tqbbanit, asanun atikni d ihiln n tsɣiyt n inmmaln, d ihiln n tmassanin timaḍlanin, d isnfarn idlsann d imazrayn, d imsasatn n umyawas amaḍlan n uḥṭṭu n tɣrma tamaḍlant d taysi tagamant, d usfrg n izrfan n ufgan.
+== Ẓeṛ daɣen ==
 
 == Ẓeṛ daɣen == 
 
