*Empty MediaWiki Message*

--- a/Tanejjikt.mw
+++ b/Tanejjikt.mw
@@ -10,3 +10,9 @@ Ma d [[tamdikt|timedkin]] yeṭṭafaren tawacult-a llan-t: [[tizwal uṛumi]], 
 Afriwen n twacult-a ttilin d ifsasen neɣ d uddisen
 
 == [[Adu-twacult|Tidu-waculin]] ==
+
+== Umuɣ n tewsitin ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Tiwaculin n imɣan]]
