--- a/Akebri.mw
+++ b/Akebri.mw
@@ -1,6 +1,6 @@
 [[Tugna:Sulfur-sample.jpg|thumb|250px]]
 
-'''Tifrit''' neɣ '''Tizefrit''' d [[aferdis akruran]] [[arasin]], [[azamul akruran|Azamul-is akruran]] '''S''', Ma d [[Uṭṭun abelkim|uṭṭun -is abelkim]] '''16''', Yettusexdem deg [[tamugri|tmugri]] n [[agari|ugari]] d [[taṭerqact|tṭerqacin]]
+'''Tifrit''' neɣ '''Akebri''' d [[aferdis akruran]] [[arasin]], [[azamul akruran|Azamul-is akruran]] '''S''', Ma d [[Uṭṭun abelkim|uṭṭun -is abelkim]] '''16''', Yettusexdem deg [[tamugri|tmugri]] n [[agari|ugari]] d [[taṭerqact|tṭerqacin]]
 
 == Iylan d inumaẓ == 
 
