*Empty MediaWiki Message*

--- a/Tikamnin_(tawsit).mw
+++ b/Tikamnin_(tawsit).mw
@@ -1,9 +1,9 @@
 {{Databox}}
-{{Datastub}}
+'''Tazrara''' neɣ '''Tikamnin''' ([[Assaɣ ussnan]]: '''Pimpinella''') d [[tawsit (tudersent)|tawsit]] n [[imɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tabecnixt|tbecnixt]]. [[Talmest|Tilmas]] n tewsit-a ttemɣayen-tt-d d tuga
 
-[[Tugna:Illustration_Pimpinella_anisum0.jpg|thumb|Pimpinella_anisum - Lḥeb leḥlawa<ref>'Plantes médicinales de Kabylie' - Mohand Aïd Youssef - Ibis Press -Paris 2006</ref>]]
-[[Tugna:Gardenology.org-IMG 2834 rbgs11jan.jpg|thumb|Pimpinella_anisum - Lḥeb leḥlawa<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref>]]
-
+== Tilmas ==
+* [[Tikmanin]] (''Pimpinella anisum'')
+* [[Tazrara tawessart]] (''Pimpinella major'')
 
 == Ismawen ==
 *Isem-is s latinit: Pimpinella anisum
