*Empty MediaWiki Message*

--- a/Tikamnin_(tawsit).mw
+++ b/Tikamnin_(tawsit).mw
@@ -5,7 +5,7 @@
 * [[Tikmanin]] (''Pimpinella anisum'')
 * [[Tazrara tawessart]] (''Pimpinella major'')
 
-== Isseqdac ==
+== Asexdem ==
 
 == Tiwelhiwin ==
 
