*Empty MediaWiki Message*

--- a/Aseggas_amanaẓ.mw
+++ b/Aseggas_amanaẓ.mw
@@ -4,7 +4,7 @@
 
 == Deg [[Taswast tagrigurt|teswast tagrigurt]] ==
 
-== Umuɣ n iseggasen imanaẓen =
+== Umuɣ n iseggasen imanaẓen ==
 
 == Ẓeṛ daɣen ==
 
