*Empty MediaWiki Message*

--- a/29_fuṛaṛ.mw
+++ b/29_fuṛaṛ.mw
@@ -1,9 +1,9 @@
 {{fuṛaṛ}}
-Ass n '''29 fuṛaṛ''' d [[arcay (akat n ukud)|ass amsircey]]. D ass wis 59 deg iseggasen ''bisekstil''. Llan 306 wussan deffir-s ar taggara n useggas.
+Ass n '''29 fuṛaṛ''' d [[arcay (akat n wakud)|ass amyermud]] igan d [[ass]] wis 60 deg [[taswast tagrigurt]] d [[taswasttayulyant]] deg waddas n [[aseggas anamaẓ|useggas anamaẓ]]. Llan 306 wussan deffir-s ar taggara n useggas.
 
-Yella ass n 29 fuṛaṛ deg iseggasen [[2000]], [[2004]], [[2008]], [[2012]], win i d-yetteddun d win n useggas [[2016]] umbeɛd deg useggas [[2020]], dɣa deg useggas [[2024]] etc.
+Yella ass n 29 fuṛaṛ deg iseggasen n [[2000]], [[2004]], [[2008]], [[2012]], [[2016]] s akin ad yili deg useggas [[2020]], dɣa deg useggas [[2024]] ... Atg
 
-Ass n ''29 fuṛaṛ'' yettili yal kuẓ iseggasen (anya n iseggasen bisekstil) n [[tafada julien]].
+Ass n ''29 fuṛaṛ'' yettili yal kuẓ iseggasen
 
 <center>[[28 fuṛaṛ]] - ''29 fuṛaṛ'' - [[1 meɣres]]</center>
 
