*Empty MediaWiki Message*

--- a/29_fuṛaṛ.mw
+++ b/29_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n '''29 fuṛaṛ''' d [[arcay (akat n wakud)|ass amyermud]] igan d [[ass]] wis 60 deg [[taswast tagrigurt]] d [[taswasttayulyant]] deg waddas n [[aseggas anamaẓ|useggas anamaẓ]]. Llan 306 wussan deffir-s ar taggara n useggas.
+Ass n '''29 fuṛaṛ''' d [[arcay (akat n wakud)|ass amyermud]] igan d [[ass]] wis 60 deg [[taswast tagrigurt]] d [[taswasttayulyant]] deg waddas n [[aseggas amanaẓ|useggas amanaẓ]]. Llan 306 wussan deffir-s ar taggara n useggas.
 
 Yella ass n 29 fuṛaṛ deg iseggasen n [[2000]], [[2004]], [[2008]], [[2012]], [[2016]] s akin ad yili deg useggas [[2020]], dɣa deg useggas [[2024]] ... Atg
 
