*Empty MediaWiki Message*

--- a/29_fuṛaṛ.mw
+++ b/29_fuṛaṛ.mw
@@ -7,12 +7,14 @@ Ass n ''29 fuṛaṛ'' yettili yal kuẓ iseggasen
 
 <center>[[28 fuṛaṛ]] - ''29 fuṛaṛ'' - [[1 meɣres]]</center>
 
-== Imagraden iqqenen ==
-{{Isenfaṛen nniḍen
-|commons=Category:29 february
-|commons azwel=29 fuṛaṛ
-}}
-{{Months}}
+== inelfuyen ==
 
+== Deg tẓuri d yidles ==
+
+== Tilalleyyin ==
+
+== Asfugel ==
+
+== Ẓeṛ daɣen ==
 
 [[Taggayt:Ass n fuṛaṛ]]
