--- a/29_fuṛaṛ.mw
+++ b/29_fuṛaṛ.mw
@@ -17,4 +17,5 @@ Ass n ''29 fuṛaṛ'' yettili yal kuẓ iseggasen
 
 == Ẓeṛ daɣen ==
 
-[[Taggayt:Ass n fuṛaṛ]]
+[[Taggayt:ussan n useggas]]
+[[Taggayt:ussan n fuṛaṛ]]
