*Empty MediaWiki Message*

--- a/Taɣcuyt.mw
+++ b/Taɣcuyt.mw
@@ -1,4 +1,5 @@
 {{Automatic taxobox}}
+[[File:Haliaeetus leucocephalus MHNT.ZOO.2010.11.96.5.jpg|thumb| ''Haliaeetus leucocephalus'']]
 '''Taɣcuyt''' ([[Assaɣ usnan]]:  ''Haliaeetus  leucocephalus'') d [[aylal]] [[tisekliwin|asekliw]] yettidir deg [[Tamrikt n Ugafa|Temrikt n ugafa]] akken iga daɣen d aylal anamur i [[Iwunak Yeddukklen n Temrikt]], Aylal-a dges Anagar n snat n [[tadfert|tdefrin]] yettidir seg [[Alaska]] d [[Kanada]] deg ugafa alamma d [[Miksik]] deg uneẓul, yettidir aladɣa deg yidgan yeldin n waman anda yettaf učči am iselman, d yidgan anda llan [[aseklu|isekla]] i wakken ad yebnu [[agdef|igdfen]]
 
 Tiɣcuyin llan-t [[addad n taggaẓt|ttusisemlen-t]] d [[Tilmas yettwaggzen s umihi wengar|iɣersiwen yettwaggzen s umihi n wengar]] maca assmi id iban d akken llan dges waṭas n iylalen yettidiren deg Alaska d Kanada tuɣal ɣer telmas yettwaggzen s kra kan deg 1995. S akken tuɣal [[talmest ur tettwaggez|talmest ur nettwaggez]] deg 2007 
