--- a/Aleẓẓaẓ.mw
+++ b/Aleẓẓaẓ.mw
@@ -1,5 +1,7 @@
 {{Databox}}
-{{Datastub}}
+Tawsit n '''ileẓẓaẓen''' neɣ '''Aleẓẓaẓ''' ([[Assaɣ ussnan]]: '''Daphne''') ilan (yesɛan) gar n 50 ar 95 n [[talmest|telmas]] id yettemɣayen s talɣa n [[tamdikt|tmedkin]] neɣ n wadu-tmedkin teṭṭafar [[tawacult (tasnudert)|tawacult]] n [[tiɣrazin|teɣrazin]], kra g telmas-is d [[Ameɣlal n tizzegzut|timeɣlalin n tizzegzut]] ma d kra n iden d [[imɣi anafan|tinafanin]]. Tilmas n tewsit-a ttemɣayen-tt-d g [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt n Ugafa|Tefriqt ugafa]] 
+
+== Umuɣ n telmas ==
 
 == Tilmas ==
 
