*Empty MediaWiki Message*

--- a/Aleẓẓaẓ.mw
+++ b/Aleẓẓaẓ.mw
@@ -11,12 +11,9 @@ Tawsit n '''ileẓẓaẓen''' neɣ '''Aleẓẓaẓ''' ([[Assaɣ ussnan]]: '''D
 [[Tugna:Daphne_gnidium3.jpg|thumb|Daphne gnidium - Alzaz]]
 
 
-== Ismawen ==
-*Isem-is s latinit: Cylamen africanum
-*Isem-is s tefransist: Daphné garou ou Garou
-*Ismawen-is nniḍen s teqbaylit: 
-*Ismawen-is nniḍen s tmaziɣt: 
+== Aleẓẓaẓ deg yidles Aqbayli d Umaziɣ ==
 
+== Aleẓẓaẓ deg wučči d usuji ==
 
 == Isseqdac ==
 
