--- a/Aleẓẓaẓ.mw
+++ b/Aleẓẓaẓ.mw
@@ -15,8 +15,11 @@ Tawsit n '''ileẓẓaẓen''' neɣ '''Aleẓẓaẓ''' ([[Assaɣ ussnan]]: '''D
 
 == Aleẓẓaẓ deg wučči d usuji ==
 
-== Isseqdac ==
+== Ẓeṛ daɣen ==
 
 
 <references />
+
 [[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:Tiɣrazin]]
