*Empty MediaWiki Message*

--- a/Tamɣast.mw
+++ b/Tamɣast.mw
@@ -1,5 +1,7 @@
 {{Databox}}
-{{Datastub}}
+'''Tamɣast''' ([[Assaɣ ussnan]]: '''Tribulus''') d [[tawsit (tudersent)|tawsit]]  [[tamagnulant|imagnulanen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[talliẓin]]. Tilmas n tewsit-a ttemɣayen-tt-d g [[anezwu|inezwa]] d [[Akal|wakalen]] yemgaraden deg waṭas n ideggan n umadal. Talmest yettwassnen yakk deg tewsit-a d [[Tamɣast tinegnit]] 
+
+== Umuɣ n telmas ==
 
 == Tilmas ==
 *
