--- a/Tamɣast.mw
+++ b/Tamɣast.mw
@@ -3,10 +3,10 @@
 
 == Umuɣ n telmas ==
 
-== Tilmas ==
+== Tiwlafin n telmas ==
 *
 
-[[Tugna:Puncture Vine (Tribulus terrestris) flowers in Hyderabad, AP W IMG 7933.jpg|thumb|Tamɣast<ref>‘Répertoire des noms indigènes des plantes spontanées, cultivées et utilisées dans le nord de l’Afrique.’ - Louis Charles Trabut - Alger 1935</ref> - Tribulus terrestris]]
+[[Tugna:Puncture Vine (Tribulus terrestris) flowers in Hyderabad, AP W IMG 7933.jpg|thumb|Tamɣast tinegnit<ref>‘Répertoire des noms indigènes des plantes spontanées, cultivées et utilisées dans le nord de l’Afrique.’ - Louis Charles Trabut - Alger 1935</ref> - Tribulus terrestris]]
 
 == Tiwelhiwin ==
 
