--- a/Tamɣast.mw
+++ b/Tamɣast.mw
@@ -8,7 +8,9 @@
 
 [[Tugna:Puncture Vine (Tribulus terrestris) flowers in Hyderabad, AP W IMG 7933.jpg|thumb|Tamɣast tinegnit<ref>‘Répertoire des noms indigènes des plantes spontanées, cultivées et utilisées dans le nord de l’Afrique.’ - Louis Charles Trabut - Alger 1935</ref> - Tribulus terrestris]]
 
-== Tiwelhiwin ==
+== Ẓeṛ daɣen ==
+
+
 
 [[Taggayt:Tiwsitin n yimɣan]]
 [[Taggayt:imɣan]]
