*Empty MediaWiki Message*

--- a/Tamɣast_tinegnit.mw
+++ b/Tamɣast_tinegnit.mw
@@ -12,9 +12,9 @@
 
 == Tiwlafin ==
 <gallery>
-Fichier:Devil's Thorn (Tribulus terrestris) (11883835994).jpg
-Fichier:Devil's Thorn (Tribulus terrestris) (11883885574).jpg
-Fichier:Devil's Thorn (Tribulus terrestris) (11884273406).jpg
+Tugna:Devil's Thorn (Tribulus terrestris) (11883835994).jpg
+Tugna:Devil's Thorn (Tribulus terrestris) (11883885574).jpg
+Tugna:Devil's Thorn (Tribulus terrestris) (11884273406).jpg
 </gallery>
 
 == Ẓeṛ daɣen ==
