--- a/Talliẓin.mw
+++ b/Talliẓin.mw
@@ -3,7 +3,7 @@
 
 == Umuɣ n tewsitin ==
 * [[Talliẓt]] (''Zygophyllum'')
-* [[Tamɣist]] (''Tribulus'')
+* [[Tamɣast]] (''Tribulus'')
 * [[Ajeyyak]] (''Guaiacum'')
 
 == Ẓeṛ daɣen ==
