*Empty MediaWiki Message*

--- a/Urwaz.mw
+++ b/Urwaz.mw
@@ -1,5 +1,13 @@
 {{Databox}}
-{{Datastub}}
+'''Uṛwaz''' neɣ '''Aṛwaz''' ([[Assaɣ ussnan]]: '''Coriaria''')   d [[tawsit (tudersent)|tawsit]] tamyiwent n [[tawacult (tasnudert)|twacult]] n [[turwazt|terwazt]] s wazal n 28 n [[talmest|telmas]] n [[Timesdurifsan|yimɣan yeǧǧuǧǧugen]]. Tilmas n tewsit-a d tid i d-itt-mɣayen deg [[ilel agrakal|wemda n yilel agrakal]] d [[Pakistan]] d New Ziland d [[Tamrikt n Wenẓul]] 
+
+== Umuɣ n telmas ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Imɣan]]
+[[Taggayt:Timesdurifsan]]
+[[Taggayt:Tiwsitin n yimɣan]]
 
 == Tilmas ==
 
