*Empty MediaWiki Message*

--- a/Wamlal.mw
+++ b/Wamlal.mw
@@ -1,16 +1,19 @@
 {{Databox}}
-{{Datastub}}
+
+'''Wamlal''' neɣ '''Camlal''' neɣ '''Wazduz'''
+
+== Umuɣ n telmas ==
+
+== Tiwlafin n telmas ==
+
 [[Tugna:Camlal .jpg|thumb|Chrysanthème des blés - Camlal<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref>]]
 [[Tugna:Camlal fleur.jpg|thumb|Chrysanthème des blés - Camlal]]
-
-== Ismawen ==
-*Isem-is s latinit: Glebionis segetum
-*Isem-is s tefransist: Chrysanthème des blés
-*Ismawen-is nniḍen s teqbaylit:
-*Ismawen-is nniḍen s tmaziɣt: 
 
 == Isseqdac ==
 
 == Tiwelhiwin ==
 
+== Ẓeṛ daɣen ==
+
 [[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n yimɣan]]
