*Empty MediaWiki Message*

--- a/Galileo_Galilei.mw
+++ b/Galileo_Galilei.mw
@@ -10,6 +10,7 @@ Deg umezruy, Galili iqqim d azamul n umennuɣ n tlelli n usnulfu mgal adabu d tm
 
 Galileo Galilei ilul di Pise (Ṭelyan), ass n 15 di furar [[1564]].
 
+[[File:Galileo facing the Roman Inquisition.jpg|thumb|220px|left|]]
 Irfed-ed tamussni ines tamezwarut sɣur imdeyynen n Vallombroso. Syin akkin, deg usseggwas 1581, ikcem ɣer tesdawit n Pise, iɣra tussna n tijjit. Deg useggas n 1585 iǧǧa tasdawit i wakken ad iɣer tafilusufit d tussnakt.
 
 Deg useggas [[1589]], Galili yuɣal d aselmad n tussnakt di tseddawit n Pise. Iffeɣ d anelmad, ikcem d aselmad.
