--- a/Wamlal.mw
+++ b/Wamlal.mw
@@ -1,6 +1,13 @@
 {{Databox}}
 
-'''Wamlal''' neɣ '''Camlal''' neɣ '''Wazduz'''
+'''Wamlal''' neɣ '''Camlal''' neɣ '''Wazduz''' ([[Assaɣ ussnan]]: '''Glebionis''') d [[tawsit (tudersent)|tawsit]] n [[imɣi asaɣur|imɣan isaɣuren]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titriyyin]]. [[Tasensartut (tasnudert)|Asismel]] n tewsit-a yesnulfa-t-id [[tasnimɣan|umusnaw n yimɣan]] Afṛensaw [[Henri Cassini]] deg useggas n [[1826]] 
+
+== Tasensartut ==
+
+== Tilmas yettwaddgen (yettuqeblen) ==
+Tilmas yettwaddgen deg tewsit n wamlal alammi d yunyu [[2012]] gant d: 
+* [[Wamlal awraɣ]] (''Glebionis segetum'') 
+* [[Wamlal imisni]]
 
 == Umuɣ n telmas ==
 
