*Empty MediaWiki Message*

--- a/Wamlal.mw
+++ b/Wamlal.mw
@@ -24,3 +24,5 @@ Tilmas yettwaddgen deg tewsit n wamlal alammi d yunyu [[2012]] gant d:
 
 [[Taggayt:Imɣan]]
 [[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:Imɣan isaɣuren]]
+[[Taggayt:Titriyyin]]
