*Empty MediaWiki Message*

--- a/Imɣi_asaɣur.mw
+++ b/Imɣi_asaɣur.mw
@@ -1,6 +1,8 @@
+[[Tugna:Camlal_fleur.jpg|thumb|250px|[[Wamlal]] d tawsit n yimɣan isaɣuren [[imɣi n useggas|iyensgasen]]]]
+
 '''Imɣi asaɣur''' d [[imɣi]] ilan (yesɛan) [[ageṭṭum n yimɣi|igeṭmen]] d [[iferr|iferran]] [[aslaw|yettisliwen]] g taggara n [[tasemhiyt n wemɣay|tsemhuyt n wemɣay]] alamma d uswir n wakal sin akin ar iẓuran
 
-Imɣan isaɣuren zemren ad ilin d [[imɣi n useggas|imɣan n useggwas]] neɣ [[imɣi asenseggas|imɣan isenseggasen]] neɣ d [[imɣi imezgi|imezgi]] 
+Imɣan isaɣuren zemren ad ilin d [[imɣi n useggas|imɣan n useggwas]] neɣ [[imɣi asenseggas|imɣan isenseggasen]] neɣ d [[imɣi imezgi|imezgi]]
 
 == Tareygama ==
 
