*Empty MediaWiki Message*

--- a/Ageṭṭum_n_yimɣi.mw
+++ b/Ageṭṭum_n_yimɣi.mw
@@ -1,5 +1,4 @@
-https://en.m.wikipedia.org/wiki/File:Polygonum_amphibium_(4973671699).jpg
-
+[[Tugna:Polygonum_amphibium_(4973671699).jpg|thumb|250px|Arezza]] 
 
 '''Ageṭṭum n yimɣi''' neɣ '''Arezza''' d agellus yak d tgejdit n [[imɣi]] [[imɣi asaɣur|asaɣur]] yettilin sufel n tegnit (lqaɛa) dɣa iteddem [[iferr|iferran]]
 
