*Empty MediaWiki Message*

--- a/Aslaw.mw
+++ b/Aslaw.mw
@@ -10,3 +10,5 @@ Aslaw yessedrus seg tezmert n yimɣi i [[Artam|wertam]] d gemmu. Deg wakud anda 
 == Aslaw deg isekla ==
 
 == Ẓeṛ daɣen ==
+
+[[Taggayt:Aṭṭanen n yimɣan]]
