*Empty MediaWiki Message*

--- a/Ajjed.mw
+++ b/Ajjed.mw
@@ -1,4 +1,5 @@
-[[Tugna:Religious symbols.svg|thumb|right|200px]]
+[[Tugna:Religionsmajoritaries.png|thumb|380px|]]
+[[Tugna:Religious symbols.svg|thumb|]]
 '''Ajjed''' neɣ '''asɣan''' d tagrawt n [[tikti|tektiwin]] d tifelsin id yesskanayen iswi n [[tudert]] d [[tallunt]] ɣer wid yettamnen yis, Akken yettwasen tikwal d Taflest yettwaqqnen ar [[tadfersengamt|tedfersengamt]] d [[tisunayin]], Akken yeqqen daɣen d [[tafada|tɣara]]
 
 == [[Tudayt]] ==
