*Empty MediaWiki Message*

--- a/Taɣeddiwt.mw
+++ b/Taɣeddiwt.mw
@@ -12,7 +12,7 @@ Imɣan-a d wid id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Ameɣreb ase
 
 [[Taggayt:imɣi]]
 
-== Tilmas ==
+== Tiwlafin n telmas ==
 
 
 [[Tugna:Scolymus hispanicus.jpg|thumb|Scolymus hispanicus - Taɣeddiwt<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref>]]
