*Empty MediaWiki Message*

--- a/Taɣeddiwt.mw
+++ b/Taɣeddiwt.mw
@@ -13,11 +13,8 @@ Imɣan-a d wid id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Ameɣreb ase
 [[Tugna:Scolymus grandiflorus Monte Pellegrino 08.jpg|thumb|Scolymus grandifloru - Taɣeddiwt]]
 [[Tugna:Scolymus maculatus.jpg|thumb|Scolymus maculatus - Izifu<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>]]
 
-==Ismawen==
-*Isem-is s latinit: Scolymus hispanicus, Scolymus grandiflorus , Scolymus maculatus
-*Isem-is s tefransist: Chardon d'Espagne, Scolyme à grande fleurs, Scolyme tâché
-*Ismawen-is nniḍen s teqbaylit: Izifu (S. maculatus)<ref>‘Étude botanique sur la Kabylie du Jurjura, avec catalogue’ - Aristide Letourneux - Imprimerie Nationale Française, Paris 1870</ref>
-*Ismawen-is nniḍen s tmaziɣt: 
+==Ismawen n iden ==
+:
 
 == Isseqdac ==
 
