*Empty MediaWiki Message*

--- a/Taɣeddiwt.mw
+++ b/Taɣeddiwt.mw
@@ -21,3 +21,5 @@ Imɣan-a d wid id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Ameɣreb ase
 == Tiwelhiwin ==
 
 [[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:Titriyyin]]
