*Empty MediaWiki Message*

--- a/Tasekra.mw
+++ b/Tasekra.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tasekla''' neɣ '''Tasedla''' ([[Assaɣ ussnan]]: '''Echinops''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titriyyin]], Deg tewsit-a llant wazal n 120 n [[talmest|telmas]] amur ameqran deg-sent yettemɣay-d deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt|Tefrikt]] 
+'''Tasekla''' neɣ '''Tasedla''' ([[Assaɣ ussnan]]: '''Echinops''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit]], Deg tewsit-a llant wazal n 120 n [[talmest|telmas]] amur ameqran deg-sent yettemɣay-d deg [[Turuft|Uruppa]] d [[Asya]] d [[Tafriqt|Tefrikt]]
 
 == Tiskanin timatanin ==
 
