--- a/Tasnayyawin.mw
+++ b/Tasnayyawin.mw
@@ -1,4 +1,4 @@
 {{Automatic taxobox}}
-'''Tasnayyawin''' ([[assaɣ usnan]]: ''Magnoliopsida'') d [[tafesna]] [[imɣan|tamɣawt]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[Timesdurifsan|tmesdurifsan]] deg [[adu-stirf|udu-stirf]] n [[Timsifsan|temsifsan]], Ayen yettmeyyizen tagrawt-a n [[imɣan|yemɣan]] yeǧǧuǧugen d akken llan-t snat n tayyawin neɣ n tmejjatin deg [[ifes|yefsan-is]] 
+'''Tasnayyawin''' ([[Assaɣ usnan]]: '''Magnoliopsida''') d [[Asmil (tasnudert)|asmil]] [[imɣan|amɣaw]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[Timesdurifsan|tmesdurifsan]] deg [[adu-stirf|udu-stirf]] n [[Timsifsan|temsifsan]], Ayen yettmeyyizen tagrawt-a n [[imɣan|yemɣan]] yeǧǧuǧugen d akken llan-t snat n tayyawin neɣ n tmejjatin deg [[ifes|yefsan-is]]
 
 == Idrasen d tfesna ==
