*Empty MediaWiki Message*

--- a/Tasnayyawin.mw
+++ b/Tasnayyawin.mw
@@ -2,3 +2,5 @@
 '''Tasnayyawin''' ([[Assaɣ usnan]]: '''Magnoliopsida''') d [[Asmil (tasnudert)|asmil]] [[imɣan|amɣaw]] yeṭṭafaren [[ifelasmil]] n [[Timesdurifsan|tmesdurifsan]] deg [[adu-stirf|afel-adur]] n [[Timsifsan|temsifsan]], Ayen yettmeyyizen tagrawt-a n [[imɣan|yemɣan]] yeǧǧuǧugen d akken llan-t snat n tayyawin neɣ n tmejjatin deg [[ifes|yefsan-is]]
 
 == Idrasen d tfesna ==
+
+== Ẓeṛ daɣen ==
