*Empty MediaWiki Message*

--- a/Taxenfelt.mw
+++ b/Taxenfelt.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Inɣerfel''' ([[Assaɣ usnan]]: '''Dianthus''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yemɣan]] yeṭṭefaren [[Tawacult (tasnudert)|tawacult]] [[tinɣerfelt]] ddg [[tafesna|tfesna]] n [[tinɣerflin|tnɣerflin]] dges Azal n 300 n [[talmest|telmas]] Azal ameqran deg-sent aẓaṛ-is n [[Turuft|Uruppa]] d [[Asya]] akken i llan-t kra n telmas n [[Tafriqt n ugafa]].
+'''Inɣerfel''' ([[Assaɣ usnan]]: '''Dianthus caryophyllus''') d [[talmest]] n [[imɣi|yemɣan]] yeṭṭefaren [[Tawsit (tudersent)|tawsit]] n [[inɣerfel (tawsit)|inɣerfel]] deg [[tawacult (tasnudert)|twacult]] n [[tinɣerflin|tnɣerflin]]
 
 == Aglam ==
 
