*Empty MediaWiki Message*

--- a/Taxenfelt.mw
+++ b/Taxenfelt.mw
@@ -7,11 +7,7 @@
 
 == [[Amyaraw]] ==
 
-== Ismawen ==
--is s latinit: Dianthus caryophyllus
-*Isem-is s tefransist: L'œillet commun
-*Ismawen-is nniḍen s teqbaylit: Qrunfel<ref>'Amawal n Yemɣan - Lexique de plantes ' - Chabane Mohand u Remdane - Mémoire d'études en Agronomie - Université de Tizi ouzou (non daté ~années 80)</ref>, Tagrufelt<ref>‘Noms arabes et berbères – Plantes, arbustes et arbres algériens et sahariens introduits et cultivés en Algérie’ Fernand Foureau, Noms arabes et berbères, plantes, arbres et arbustes algériens et sahariens. Paris 1896</ref>, Taxenfelt<ref> ‘Répertoire des noms indigènes des plantes spontanées, cultivées et utilisées dans le nord de l’Afrique.’ - Louis Charles Trabut - Alger 1935</ref>
-*Ismawen-is nniḍen s tmaziɣt:
+== Ismawen n iden s Teqbaylit d Tmaziɣt ==
 
 == Isseqdac ==
 
