*Empty MediaWiki Message*

--- a/Taxenfelt.mw
+++ b/Taxenfelt.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Inɣerfel''' ([[Assaɣ usnan]]: '''Dianthus caryophyllus''') d [[talmest]] n [[imɣi|yemɣan]] yeṭṭefaren [[Tawsit (tudersent)|tawsit]] n [[inɣerfel (tawsit)|inɣerfel]] deg [[tawacult (tasnudert)|twacult]] n [[tinɣerflin|tnɣerflin]]
+'''Inɣerfel''' ([[Assaɣ usnan]]: '''Dianthus caryophyllus''') d yiwet n [[talmest]] n [[imɣi|yemɣan]] yeṭṭefaren [[Tawsit (tudersent)|tawsit]] n [[inɣerfel (tawsit)|inɣerfel]] deg [[tawacult (tasnudert)|twacult]] [[tinɣerfelt]] yeṭṭafaren s iman-is [[Tafesna (tasnudert)|tafesna]] n [[tinɣerflin|tnɣerflin]]
 
 == Aglam ==
 
