*Empty MediaWiki Message*

--- a/Taxenfelt.mw
+++ b/Taxenfelt.mw
@@ -1,6 +1,8 @@
 {{Automatic taxobox}}
 '''Inɣerfel''' ([[Assaɣ usnan]]: '''Dianthus caryophyllus''') d yiwet n [[talmest]] n [[imɣi|yemɣan]] yeṭṭefaren [[Tawsit (tudersent)|tawsit]] n [[inɣerfel (tawsit)|inɣerfel]] deg [[tawacult (tasnudert)|twacult]] [[tinɣerfelt]] yeṭṭafaren s iman-is [[Tafesna (tasnudert)|tafesna]] n [[tinɣerflin|tnɣerflin]]
 
+Talmest-a tettemɣay-d s talɣa tagamant deg tamiwin n [[ilel agrakal|wemda n yilel agrakal]]. Dɣa talmest-a seg zik tenfufed ar iɣerfen d yidles yemgaraden
+
 == Aglam ==
 
 == Azal-is di tdamsa ==
