--- a/Inɣerfel_(tawsit).mw
+++ b/Inɣerfel_(tawsit).mw
@@ -6,6 +6,15 @@ Tilmas n tewsit-a gant d [[imɣi asaɣur|imɣan isaɣuren]] gar-asent aṭas n t
 == Umuɣ n telmas ==
 
 == Tiwlafin n telmas ==
+<gallery>
+Dianthus armeria 060805.jpg | ''Dianthus armeria''
+Pink Sweet William flowers.jpg | ''Dianthus barbatus''
+Dianthus carthusianorum 2.jpg | ''Dianthus carthusianorum''
+Dianthus caryophyllus2.jpg | ''Dianthus caryophyllus''
+Dianthus glacialis 1.jpg | ''[[Œillet des glaciers|Dianthus glacialis]]
+Dianthus.jpg | ''Dianthus plumarius''
+Dianthus superbus 5.jpg | ''Dianthus superbus''
+</gallery>
 
 == Ẓeṛ daɣen ==
 
