*Empty MediaWiki Message*

--- a/Tinɣerfelt.mw
+++ b/Tinɣerfelt.mw
@@ -9,3 +9,7 @@
 * [[Inɣerfel (tawsit)|Inɣerfel]] (''Dianthus'')
 * [[Tiɣiɣac]] (''Silene'') 
 * [[Tasra]] (''Saponaria'')
+
+== Ẓeṛ daɣen ==
+[[Taggayt:Tiwaculin n yimɣan]]
+[[Taggayt:Tasnayyawin]]
