--- a/Tinɣerfelt.mw
+++ b/Tinɣerfelt.mw
@@ -11,5 +11,5 @@
 * [[Tasra]] (''Saponaria'')
 
 == Ẓeṛ daɣen ==
-[[Taggayt:Tiwaculin n yimɣan]]
+[[Taggayt:Tiwaculin n imɣan]]
 [[Taggayt:Tasnayyawin]]
