*Empty MediaWiki Message*

--- a/Tamserɣint.mw
+++ b/Tamserɣint.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tamserɣint''' neɣ '''Userɣend''' ([[Assaɣ ussnan]]: '''Telephium imperati''') d [[talmest]] n [[imɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[taserɣint (tawsit)|tserɣint]] deg [[tawacult (tasnudert)|twacult]] n [[Tinɣerflt|tenɣerfelt]]
+'''Tamserɣint''' neɣ '''Userɣend''' ([[Assaɣ ussnan]]: '''Telephium imperati''') d [[talmest]] n [[imɣan]] yeṭṭafaren [[tawsit (tudersent)|tawsit]] n [[taserɣint (tawsit)|tserɣint]] deg [[tawacult (tasnudert)|twacult]] n [[Tinɣerfelt|tenɣerfelt]]
 
 == Aglam ==
 
