*Empty MediaWiki Message*

--- a/Addad_(imɣi).mw
+++ b/Addad_(imɣi).mw
@@ -1,7 +1,17 @@
 {{Databox}}
-{{Datastub}}
-[[Tugna:Atractylis_gummifera1.JPG|thumb|Fleurs de Carlina gummifera - Addad<ref>'Imɣan n Tensawt - Plantes de Kabylie ' - Saïd Zidat - Editions Innexsys, Luxembourg, Avril 2016 <nowiki>ISBN 978-99959-0-205-6</nowiki>  www.imghantensawt.lu</ref> neɣ Tabuneqqart]]
-[[Tugna:Addad IMG 8218.jpg|thumb|Carlina gummifera - Addad neɣ Tabuneqqart]]
+'''Addad''' neɣ '''Akicaw''' ([[Assaɣ ussnan]]: '''Carlina''') d [[tawsit (tudersent)|tawsit]] n [[imɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetrit]] deg [[Tafesna (tasnudert)|tfesna]] n [[Titriyyin|tetriyyin]]. Deg tewsit-a llant gar n 40 ar 50 n [[talmest|telmas]] id yettemɣayen deg [[ilel agrakal|wemda n yilel agrakal]] d [[asamar alemmas|usamer alemmas]] maca llant telmas n iden id yettemɣayen deg tamiwin n iden 
+
+== [[Tasnettit|Aẓaṛ n wawal]] ==
+
+== Umuɣ n telmas ==
+
+== Tiwlafin n telmas ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n yimɣan
+[[Taggayt:Titriyyin]]
 
 == Tilmas ==
 *
