--- a/Addad_(imɣi).mw
+++ b/Addad_(imɣi).mw
@@ -10,7 +10,7 @@
 == Ẓeṛ daɣen ==
 
 [[Taggayt:Imɣan]]
-[[Taggayt:Tiwsitin n yimɣan
+[[Taggayt:Tiwsitin n yimɣan]]
 [[Taggayt:Titriyyin]]
 
 == Tiwelhiwin ==
