*Empty MediaWiki Message*

--- a/Taɣeddiwt.mw
+++ b/Taɣeddiwt.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Taɣeddiwt''' ([[Assaɣ ussnan]]: '''Cirsium''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] [[imɣi imezgi|imezgiyen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit]] (dɣa tawacult-a d yiwet ger waṭas n [[ifelasmil|yiflesmilen]] imsennenen). Tawsit-a temgarad ɣef tewsitin nniden n temsennenin am [[akicaw|ukicaw]] d [[isri (tawsit)|yisri]] 
+'''Taɣeddiwt''' ([[Assaɣ ussnan]]: '''Cirsium''') d [[tawsit (tudersent)|tawsit]] n [[imɣi|yimɣan]] [[imɣi imezgi|imezgiyen]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit]] (dɣa tawacult-a d yiwet ger waṭas n [[ifelasmil|yiflesmilen]] imsennenen). Tawsit-a temgarad ɣef tewsitin nniden n temsennenin am [[addad|ukicaw]] d [[isri (tawsit)|yisri]] 
 
 Imɣan-a d wid id yettemɣayen deg [[Turuft|Uruppa]] d [[Asya]] d [[Ameɣreb aserɣin|umeɣreb aserɣin]]
 
