--- a/Acikaw_(tawsit).mw
+++ b/Acikaw_(tawsit).mw
@@ -1,1 +1,4 @@
-.
+{{Databox}}
+'''Acikaw''' ([[Assaɣ ussnan]]: '''Galactites''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetrit]]. [[Talmest]] yettwassnen yakk deg [[tawsit (tudersent)|tewsit-a]] tga d [[acikaw|acikaw imezdi]]
+
+Asegrew n tewsit-a yennulfa-d i tikkelt tamezwart aseggas n [[1794]] sɣur [[amesnimɣan|umesnimɣan]] n [[Lalman]] [[Conrad Moench]]
