*Empty MediaWiki Message*

--- a/Acikaw_(tawsit).mw
+++ b/Acikaw_(tawsit).mw
@@ -2,3 +2,16 @@
 '''Acikaw''' ([[Assaɣ ussnan]]: '''Galactites''') d [[tawsit (tudersent)|tawsit]] n [[imɣan|yimɣan]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[titrit|tetrit]]. [[Talmest]] yettwassnen yakk deg [[tawsit (tudersent)|tewsit-a]] tga d [[acikaw|acikaw imezdi]]
 
 Asegrew n tewsit-a yennulfa-d i tikkelt tamezwart aseggas n [[1794]] sɣur [[amesnimɣan|umesnimɣan]] n [[Lalman]] [[Conrad Moench]]
+
+== Umuɣ n telmas ==
+
+== Tiwlafin n telmas ==
+
+== Asexdem ==
+
+== Ẓeṛ daɣen ==
+
+[[Taggayt:Imɣan]]
+[[Taggayt:Tiwsitin n yimɣan]]
+[[Taggayt:Titriyyin]]
+[[Taggayt:Imɣan isaɣuren]]
