*Empty MediaWiki Message*

--- a/Iksilen.mw
+++ b/Iksilen.mw
@@ -1,6 +1,6 @@
 {{Infobox city}}
 
-'''Iqsilen''' d taɣiwant n utaram (lɣerb) n [[Tawilayt n Bgayet|twilayt n Bgayet]], tezga-d ɣef yiri n yilel, deg Tmurt n Leqbayel, teqqen ɣer tdayṛa n [[Adekkar|Udekkar]]. Zedɣen-tt 4.586 n yimezdaɣen.
+'''Iksilen''' (s [[Tifinaɣ]]: '''ⵉⴽⵙⵉⵍⴻⵏ''') d [[taɣiwant]] id yezgan deg utaram  n [[Tawilayt n Bgayet|ugezdu n Bgayet]], tezga-d ɣef yiri n y[[ilel]] deg Tmurt n Leqbayel, teṭṭafar asun n [[Adekkar|Udekkar]]. Zedɣen-tt 4.586 n yimezdaɣen.
 
 
 {{Tiɣiwanin tinaragin
