*Empty MediaWiki Message*

--- a/At_Wertiran.mw
+++ b/At_Wertiran.mw
@@ -85,7 +85,7 @@ Llan aṭas n tudrin deg At Wertilan, gar-asen ad naf :
 {{début de colonnes|taille=10}}
 
 * Ɛebbad Ccrif
-* Ɛarraṣeyyen
+* Iɛarrasiyyen
 * Agemmun n At Ɛisa 
 * Amdun
 * Amegrud
@@ -104,13 +104,13 @@ Llan aṭas n tudrin deg At Wertilan, gar-asen ad naf :
 * Lexwabi
 * Lǧemɛa n At Wertilan
 * Lqaɛ Uẓru
-* Lɣers
+* Iɣersiwen
 * Mziyyan
 * Tawrirt Icenwiyen
 * Tizi Waṭu
 * Iɣil n At Malek 
 * Tagraynut
-* Talmatt
+* Talmat
 * Taẓrut
 * Tiɛwinin 
 * Tigunatin
@@ -118,6 +118,7 @@ Llan aṭas n tudrin deg At Wertilan, gar-asen ad naf :
 * Tiɣilt n Taqewin
 * Tirẓit
 * Ulmuten
+* Tifrawin
 {{fin de colonnes}}
 
 == Tizmilin ==
